# leetcode-and-c-learning

./: README.md
leetcode_dsa_cpp/: CMakeLists.txt  leet_2144.cpp  leet_2_2144.cpp  leet_3754.cpp
leetcode_dsa_cpp/1979/: leet_1979.cpp
leetcode_dsa_cpp/21/: leet_21  leet_21.cpp
leetcode_dsa_cpp/2540/: easy2540.cpp  easy2540_2.cpp
leetcode_dsa_cpp/26/: leet_26.h
leetcode_dsa_cpp/27/: leet27.cpp  leet27_2.cpp
leetcode_dsa_cpp/28/: leet_28.cpp
leetcode_dsa_cpp/3/: leet_3.cpp
leetcode_dsa_cpp/3120/: leet_3120_first.cpp  leet_3120_first.h  leet_3120_second.cpp  leet_3120_second.h
leetcode_dsa_cpp/3300/: leet_3300.cpp  leet_3300.h
leetcode_dsa_cpp/3754/: leet_3754.cpp  leet_3754.h
leetcode_dsa_cpp/66/: leet_66.h  leet_66_second.h
leetcode_dsa_cpp/8/: leet_8_first.cpp  leet_8_second.cpp
leetcode_dsa_cpp/876/: leet_876.cpp
leetcode_dsa_py/: leet_1.py
mysql/: sql_leet_182.sql
