cmake_minimum_required(VERSION 4.2)
project(leetcode_dsa_cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(1331)
include_directories(237)
include_directories(3120)
include_directories(3300)
include_directories(3754)
include_directories(3756_2553)

add_executable(leetcode_dsa_cpp
        1331/leet_1331.cpp
        1331/leet_1331.h
        1331/leet_1331_main.cpp
        1331/leet_1331_main.h
        2144/leet_2144.cpp
        2144/leet_2_2144.cpp
        237/leetcode_237.h
        2540/easy2540.cpp
        2540/easy2540_2.cpp
        27/leet27.cpp
        27/leet27_2.cpp
        28/leet_28.cpp
        3/leet_3.cpp
        3120/leet_3120_first.cpp
        3120/leet_3120_first.h
        3120/leet_3120_second.cpp
        3120/leet_3120_second.h
        3300/leet_3300.cpp
        3300/leet_3300.h
        3754/leet_3754.cpp
        3754/leet_3754.h
        3756_2553/leer_3756_1st.cpp
        3756_2553/leer_3756_1st.h
        3756_2553/leet_2553.cpp
        3756_2553/leet_2553.h
        8/leet_8_first.cpp
        8/leet_8_second.cpp
        876/leet_876.cpp
        26/leet_26.h)
